--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,12 @@
-name: wicked
+# name: wicked
 
-dependencies:
-  - python
-  - pybind11
-  - cxx-compiler
-  - pip
-  - cmake
-  - pytest
-  - numpy
-  - conda-forge::opt_einsum
-  - conda-forge::lcov
+# dependencies:
+#   - python
+#   - pybind11
+#   - cxx-compiler
+#   - pip
+#   - cmake
+#   - pytest
+#   - numpy
+#   - conda-forge::opt_einsum
+#   - conda-forge::lcov
