--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "wicked"
+name = "wickd"
 version = "1.1.0"
 description = "An example minimal project that compiles bindings using nanobind and scikit-build"
 readme = "README.md"
@@ -16,7 +16,7 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/fevangelista/wicked"
+Homepage = "https://github.com/fevangelista/wickd"
 
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
