--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -34,5 +34,12 @@ jobs:
           python -m pip install pytest
           pip install --verbose .
 
+      - name: List installed files
+        run: |
+          pip show -f wickd
+          ls -l
+          ls -l wickd
+          ls -R $(python -c "import site; print(site.getsitepackages()[0])")/wickd
+
       - name: Test
         run: python -m pytest
