--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
+cmake_policy(SET CMP0167 NEW)
+
 cmake_minimum_required(VERSION 3.15...3.26)
 
 project(wickd LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if (NOT SKBUILD)
   message(WARNING "\
