--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -47,8 +47,10 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y g++-11
+          sudo apt-get install -y g++-11 gcc-11
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 100
+          gcc --version
           g++ --version
 
       - name: Install Latest Clang on macOS
@@ -61,8 +63,13 @@ jobs:
           clang++ --version
 
       - uses: pypa/cibuildwheel@v2.22
+        if: matrix.os == 'ubuntu-latest'
         env:
-          CIBW_ENVIRONMENT: CXX=g++ CXXFLAGS="-std=c++20"
+          CC: gcc-11
+          CXX: g++-11
+          CIBW_ENVIRONMENT: CC=gcc-11 CXX=g++-11 CXXFLAGS="-std=c++20"
+          CIBW_ENVIRONMENT_PASS_LINUX: CC CXX
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_28
 
       - name: Verify clean directory
         run: git diff --exit-code
