Run with C++20 and debug info

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ wheel.py-api = "cp312"
 build-verbosity = 1
 
 # Run pytest to ensure that the package was correctly built
-test-command = "pytest {project}/tests"
+test-command = "gdb -ex 'run' -ex 'bt' --args python -m pytest tests"
+# "pytest {project}/tests"
 test-requires = "pytest"
 
 # Don't test Python 3.8 wheels on macOS/arm64
