--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -44,6 +44,9 @@ jobs:
           submodules: true
 
       - uses: pypa/cibuildwheel@v2.22
+        env:
+          CIBW_ENVIRONMENT: CXXFLAGS="-g -O0"
+          CIBW_BUILD_VERBOSITY: 1
 
       - name: Verify clean directory
         run: git diff --exit-code
