--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ wheel.py-api = "cp312"
 build-verbosity = 1
 
 # Run pytest to ensure that the package was correctly built
-test-command = "gdb -ex 'run' -ex 'bt' --args python -m pytest {project}/tests"
+test-command = 'lldb -ex "run" -ex "bt" --args python -m pytest {project}/tests'
 # "pytest {project}/tests"
 test-requires = "pytest"
 
