--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -36,8 +36,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14]
-
+        os: [macos-14] 
+        # windows-latest, ubuntu-latest
+        
     steps:
       - uses: actions/checkout@v4
         with:
